# portfolio

./: .gitignore  .pdm-python  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt  run.py
app/: admin.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_service_options_service_icon_and_more.py  0003_project.py  0004_alter_project_options_project_technologies.py  0005_project_slug.py  0006_alter_project_slug.py
application/: __init__.py  views.py
application/static/: CNAME  README.md  bower.json
application/static/assets/scripts/: app.js
application/templates/: base.html  index.html
config/: settings.py  urls.py
helpers/: base_model.py
static/assets/css/: main.css
templates/: index.html  portfolio-details.html
templates/_layout/: base.html
templates/_partials/: footer.html  header.html
