[project]
name = "portfolio"
version = "2."
description = "Default template for PDM package"
authors = [
    {name = "Salim Kachemela", email = "sakachemela@gmail.com"},
]
dependencies = ["django>=5.2.4", "psycopg>=3.2.9", "django-extensions>=4.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
