[project]
name = "portfolio"
version = "2.0.0"
description = "Default template for PDM package"
authors = [{ name = "Salim Kachemela", email = "sakachemela@gmail.com" }]
dependencies = [
  "django>=5.2.4",
  "psycopg>=3.2.9",
  "django-extensions>=4.1",
  "python-dotenv>=1.1.1",
  "pillow>=12.0.0",
  "gunicorn>=23.0.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[dependency-groups]
dev = ["ipython>=9.4.0"]

[tool.ruff]
# Allow lines to be as long as 120 characters.
line-length = 120

[tool.djlint]
ignore = "H006,H030,H031"
include = "H017,H035"
indent = 2
blank_line_after_tag = "load,extends,endblock,endcomment"
profile = "django"
max_line_length = 120
format_attrite_template_tags = true
